Plugging along. Odd random number issue.

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,11 @@
 *~
-*.swp
+*.sw?
 *.tar.gz
-Shared
-waning-branch
-partial-recovereds-only
-Swiss
-baselines-only
-daisy-econ-code
-facility-added-interface
-facility-adding-interface
-facility-now-with-shift-split-quantitative-presence
-facility-now-with-shift-split
 *.txt
 nohup.out
-temp-facility-model-dump/
-miscellaneous/
-post-scenarios/
-sample_data-new.rds
-sum.png
+*.png
+*/*.png
+*/*.rds
+*.rds
+*.csv
+*/*.csv
